Fix .lock files

--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
     "paginate"
   ],
   "devDependencies": {
-    "@nestjs/common": "^9.0.5",
-    "@nestjs/core": "9.4.3",
-    "@nestjs/testing": "^9.0.5",
-    "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/common": "^7.5.5",
+    "@nestjs/core": "^7.5.5",
+    "@nestjs/testing": "^7.0.0",
+    "@nestjs/typeorm": "^7.1.0",
     "@types/jest": "^27.0.0",
-    "@types/node": "^20.9.0",
+    "@types/node": "^17.0.22",
     "coveralls": "^3.0.5",
     "jest": "^26.6.3",
     "mysql": "^2.17.1",
-    "prettier": "^3.1.0",
+    "prettier": "^2.1.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.1.0",
+    "rxjs": "^6.5.2",
     "ts-jest": "^26.4.4",
     "ts-node": "^10.0.0",
-    "typeorm": "0.3.17",
+    "typeorm": "0.3.6",
     "typescript": "^4.0.5"
   },
   "scripts": {
